--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>كتاب الاغاني For You</title>
+    <title>تفسير الشعر العربي</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -11,6 +11,7 @@
             color: #e0e0e0;
             font-family: Arial, sans-serif;
             direction: rtl; /* Right-to-left for Arabic */
+            /*background-image: url("images/background.png");*/
         }
         .navbar-custom {
             background-color: #4a148c94;
@@ -74,7 +75,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <a class="navbar-brand" href="#">
             <img src="images/icons8-rose-96.png" alt="Logo">
-            ابو الفرج الاصفهاني - كتاب الاغاني
+            تفسير الشعر العربي
         </a>
     </nav>
 
@@ -90,7 +91,6 @@
 
     <div class="maker-credit">
         Created by Muath F Alsubhi
-        <i class="fa-solid fa-wand-magic-sparkles"></i>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -102,8 +102,14 @@
             displayMessage(message, 'user');
             $('#user-input').val('');
 
-            $.post('/explain', { poet: message }, function(data) {
-                displayMessage(data.explanation, 'bot');
+            $.ajax({
+                url: '/ask',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({ message: message }),
+                success: function(data) {
+                    displayMessage(data.message, 'bot');
+                }
             });
         }
 
